fix team nav and align submenu

--- a/css/custom.css
+++ b/css/custom.css
@@ -485,11 +485,11 @@ h3 {
   .navbar-nav li:hover > ul.dropdown-menu {
     display: block;
     margin-top: -4px;
-    text-align: center;
+    text-align: left;
     background-color: transparent;
     border: 0;
-    width: fit-content;
-    margin: auto;
+    width: 60%;
+    margin-left: auto;
   }
   .map{
     height: 250px;
